# discord-bkp

./: .gitignore  bot.py  pyproject.toml  requirements.txt
